# djangoSIGE

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .tool-versions  Makefile  Pipfile  README.dev.md  README.md  conftest.py  example.env  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: Django.yml  django.yaml
config/: settings.py  urls.py  wsgi.py
config/settings/: base.py  local.py  productions.py
contrib/: env_gen.py
djangosige/: apps.py  context_version.py  custom_views.py  manage.py  middleware.py  models.py  settings.py  urls.py  views.py  views_mixins.py  wsgi.py
djangosige/apps/base/: apps.py  custom_views.py  services.py  urls.py  views.py
djangosige/apps/cadastro/: apps.py  urls.py
djangosige/apps/compras/: apps.py  urls.py
djangosige/apps/estoque/: apps.py  urls.py
djangosige/apps/financeiro/: apps.py  urls.py
djangosige/apps/fiscal/: apps.py  urls.py
djangosige/apps/login/: apps.py  (+5 more)
djangosige/base/: apps.py  context_version.py  custom_views.py  services.py  urls.py  views.py  views_mixins.py
djangosige/cadastro/: apps.py  urls.py
djangosige/cadastros/: admin.py  apps.py  choices.py  filtros.py  forms.py  mixins.py  models.py  querysets.py  signals.py  urls.py  validators.py  views.py
djangosige/compras/: apps.py  urls.py
djangosige/configs/: __init__.py  settings.py
djangosige/dashboard/: apps.py  custom_views.py  services.py  tests.py  urls.py  views.py  views_mixins.py
djangosige/db/: models.py
djangosige/djangosige/: asgi.py  settings.py  urls.py  wsgi.py
djangosige/estoque/: apps.py  urls.py
djangosige/financeiro/: apps.py  urls.py
djangosige/fiscal/: apps.py  urls.py
djangosige/login/: apps.py  context_user.py  forms.py  models.py  urls.py  views.py
djangosige/templates/: 404.html  500.html  _base.html  _logo.html  _navmenu.html  _sidemenu.html  pagina_inicial.html
djangosige/templatetags/: djangosige.py
djangosige/tests/: factories.py  test_case.py  test_services.py  test_settings.py  test_templatetags_paginacao.py  test_views.py
djangosige/vendas/: apps.py  urls.py
docs/source/: conf.py  index.rst
requirements/: base.txt  dev.txt  local.txt
(+463 files in other folders)
