[project]
name = "djangosige"
version = "0.1.0"
description = "Sistema Integrado de Gestão Empresarial baseado em Django"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.7",
    "geraldo",
    "pysignfe",
    "python-decouple>=3.8",
    "signxml>=4.2.0",
]

[tool.uv.sources]
geraldo = { url = "https://github.com/thiagopena/geraldo/archive/master.zip" }
pysignfe = { url = "https://github.com/thiagopena/PySIGNFe/archive/master.zip" }
